Code refactoring. Update getEpicToId(), getSubtaskToId(), getTaskToId() method.